[package]
name = "flutter-cli"
version = "0.1.0"
edition = "2024"
description = "Flutter app inspection CLI using Dart VM Service Protocol"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
futures = "0.3"
tokio-tungstenite = "0.24"
base64 = "0.22"
toml = "0.9"
sha2 = "0.10"
libc = "0.2"

[profile.release]
lto = false
incremental = true
